# django-ckeditor-filebrowser-filer

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  cms_helper.py  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql.yml  lint.yml
changes/: 59.bugfix
ckeditor_filebrowser_filer/: __init__.py  urls.py  views.py
ckeditor_filebrowser_filer/static/ckeditor/ckeditor/plugins/filerimage/: plugin.js
ckeditor_filebrowser_filer/static/ckeditor/ckeditor/plugins/filerimage/dialogs/: filerImageDialog.js
ckeditor_filebrowser_filer/static/ckeditor/ckeditor/plugins/filerimage/lang/: en.js  it.js
ckeditor_filebrowser_filer/static/ckeditor/plugins/filerimage/: plugin.js
ckeditor_filebrowser_filer/static/ckeditor/plugins/filerimage/dialogs/: filerImageDialog.js
ckeditor_filebrowser_filer/static/ckeditor/plugins/filerimage/lang/: it.js
ckeditor_filebrowser_filer/static/djangocms_text_ckeditor/ckeditor/plugins/filerimage/: plugin.js
ckeditor_filebrowser_filer/static/djangocms_text_ckeditor/ckeditor/plugins/filerimage/dialogs/: filerImageDialog.js
ckeditor_filebrowser_filer/static/djangocms_text_ckeditor/ckeditor/plugins/filerimage/lang/: en.js  fr.js  ru.js
project/: admin.py  models.py  urls.py
project/migrations/: 0001_initial.py
