[metadata]
name = django-ckeditor-filebrowser-filer
version = attr: ckeditor_filebrowser_filer.__version__
url = https://github.com/nephila/django-ckeditor-filebrowser-filer
author = Iacopo Spalletti
author_email = i.spalletti@nephila.it
description = A django-filer based CKEditor filebrowser
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
classifiers =
	License :: OSI Approved :: BSD License
	Development Status :: 5 - Production/Stable
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires =
	django-filer>=2.0
setup_requires =
	setuptools
packages = ckeditor_filebrowser_filer
python_requires = >=3.7
zip_safe = False
keywords =
	django-ckeditor-filebrowser-filer
	django
	filer
	ckeditor
	filebrowser

[options.package_data]
* = *.txt, *.rst
ckeditor_filebrowser_filer = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[sdist]
formats = zip

[bdist_wheel]
universal = 1
